--- a/healthbot.html
+++ b/healthbot.html
@@ -1,2 +1,2 @@
-<p><iframe src='https://webchat.botframework.com/embed/healthbot-bc4jf4j?s=FMTknqF-VqY.cKJO7151637dhTmQQoka-Cl2jtr2pCwRj_AsEKMrbcM'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+<p><iframe src='https://webchat.botframework.com/embed/healthbot-bc4jf4j?s=pXUdG842cEI.MSe8PlrJB6TnWf9GM8Wb6DYz_ONWiPbGdsSulDVuEPI'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 </p>
