--- a/index.html
+++ b/index.html
@@ -577,10 +577,10 @@
                 <div class="row footer-top-29">
                     <div class="col-md-5 footer-list-29 pe-xl-5">
                         <h6 class="footer-title-29">Contact Info </h6>
-                        <p class="mb-2 pe-xl-5">Address : Dentition, 10001, 5th Avenue, #06 lane street, NY - 62617.
+                        <p class="mb-2 pe-xl-5">Address : Sri manakula Vinayagar Engineering college
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a></p>
-                        <p class="mb-2">Email : <a href="mailto:info@example.com">info@example.com</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+91 9715818963">+91 9715818963</a></p>
+                        <p class="mb-2">Email : <a href="mailto:kishorekanth03@gmail.com">kishorekanth03@gmail.com</a></p>
                     </div>
                     <div class="col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
